--- a/TODO
+++ b/TODO
@@ -43,10 +43,6 @@ fit in (DND, templates, etc).
 ***    noticeboard where we list whatever comes to our mind.)
 *********************************************************************
 
-wxGTK bug:
- - wxTreeCtrl::HitTest() doesn't work well with non standard icon sizes
- - strange WM hints on fvwm95/alpha
-
 wxMSW bugs:
  - memory leaks (some from cclient, others - not sure)
  - radiobox doesn't respect constraints, adjusts its size as it thinks is better
@@ -94,6 +90,7 @@ VZ:
 
 ******* Priorities for KB: ******************************
 
+- add configure option for python path
 - before doing ping, change to logging for window only and restore(!)
   old settings(!) afterwards to suppress error messages for closed POP
   folders
