--- a/TODO
+++ b/TODO
@@ -91,7 +91,7 @@ VZ:
 ******* Priorities for KB: ******************************
 
 - add closing delay for sentmail folder to avoid reopening it each time
-
+- add SIGSEGV handler for safe exit, to attempt and safe things
 - add configure option for python path
 - before doing ping, change to logging for window only and restore(!)
   old settings(!) afterwards to suppress error messages for closed POP
