--- a/TODO
+++ b/TODO
@@ -90,6 +90,8 @@ VZ:
 
 ******* Priorities for KB: ******************************
 
+- document python callback behaviour for incoming folders, possibly do 
+  testing for callback results in CollectOneFolder!!
 - add closing delay for sentmail folder to avoid reopening it each time
 - add SIGSEGV handler for safe exit, to attempt and safe things
 - add configure option for python path
