--- a/README
+++ b/README
@@ -1,36 +1,26 @@
 $Id$
 
 --------------------------------------------------------------------
-README file for Mahogany, Release 0.21a "Polwarth II"
+README file for Mahogany, Release 0.22a "Polwarth III"
 --------------------------------------------------------------------
 
 --------------------------------------------------------------------
 Issues with the current release
 --------------------------------------------------------------------
 
-Mahogany now compiles with gtk 1.2.1, however the underlying wxGTK
-toolkit still exhibits a few minor bugs:
-   - with gtk 1.2.1: Preferences dialogs layout is corrupted, but 
-                     resizing them corrects the layout, labels
-                     are centred.
-   - with gtk 1.0.6: Occasionally (depending on the windowmanager),
-                     dialogs flicker and resize themselves to the
-                     minimal size of approx. 1x1 pixels. All you can
-                     do in that situation is to either press a key to
-                     select it or close it manually.
-
-   Depending on how soon these two problems get fixed, we will relink
-   the current release of Mahogany with wxGTK and re-release it.
-   The next release is planned for the end of May/first week of June
-   and will be for Unix and Windows.
+Mahogany, just like wxGTK, works best with gtk 1.2.x. It should still
+work with 1.0.6, but this depends on wxGTK which might or might not
+exhibit some problems with it.
 
 More detailed information about Mahogany, how to get support for it,
 how to contribute it, and last not least, how to use it, can be found
 in the user manual, included in HTML and PostScript format, or the
 online help system. Some quick compilation notes can be found below,
-more in the manual.
+more in the manual. All the information, including the full online
+docs, are also available on the Mahogany web page:
+http://mahogany.home.dhs.org/
 
-Be not confused by references to a program called "M", that was the
+Be not confused by references to a program called "M", which was the
 original working title for "Mahogany".
 
 --------------------------------------------------------------------
@@ -75,7 +65,41 @@ More detailed, step for step, instructions can be found in the Manual,
 which is contained in the Mdoc.tar.gz file in the doc directory.
 You can also view it online at http://www.phy.hw.ac.uk/~karsten/M/dl/Manual/
 
-To install:
+Before you can compile Mahogany, you will need to get a copy of wxGTK and
+compile and install it. It is important, that you use a very recent copy of
+wxGTK, or the wxGTK source snapshot available from the same places where you
+get Mahogany, and configure it as detailed below. Compiling wxGTK with
+different configure switches is possible, and should generally work with
+Mahogany. However, to play it safe, stick to the options below.
+
+- wxGTK should be configured with the following options:
+    ./configure \
+    --with-gtk \
+    --with-static \
+    --without-shared \
+    --with-dmalloc \
+    --without-odbc \
+    --with-threads \
+    --with-libpng \
+    --with-libjpeg 
+
+If using gtk 1.0.6 rather than 1.2.x, you need to add --without-dnd .
+If you experience a problem with thread support, you can just as well
+compile it --without-threads, they are not currently required.
+If you like, you can change the without/with static/shared options above
+to generate a shared library instead of the static one.
+
+Doing a "make" and "make install" in the wxWindows/src directory should install
+the header files and libraries on your system. You can use the --prefix= option
+when compiling wxGTK, to chose a different (default:/usr/local) installation
+location. If you install it in a non-standard location, you can make sure that
+Mahogany will find it, by linking the include/wx directory to Mahogany's
+extra/include/wx directory and all the libwx_gtk* files to Mahogany's
+extra/lib directory.  In that case, Mahogany's configure should be run 
+with the additional --without-wxconfig option.
+
+
+To compile and install Mahogany itself:
   ./configure --help
   ./configure "with your appropriate options"
   make depend
@@ -89,6 +113,16 @@ To install:
     make install         # this will install the program and required files
     make install_doc     # this should install the documentation and online help
     make install_locale  # this tries to build and install the message catalogs
+
+Also, if you change into the src directory, the additional targets
+"make static" and "make semistatic" are available, to produce binaries 
+with less dependencies on external libraries.
+
+If you want to re-compile Mahogany, it is generally sufficient to do
+this from withing the src directory, as there is hardly ever a need to 
+rebuild all the additional software in the extra/src directory.
+Runnin make from within src is much faster than doing this from the
+toplevel directory.
 
 Required software:
 
@@ -104,17 +138,3 @@ Required software:
    - libgtk 1.0.x, libglib 1.0.x, or gtk/glib 1.2.x
 
 
-- wxGTK should be configured with the following options:
-    ./configure \
-    --with-gtk \
-    --with-static \
-    --without-shared \
-    --with-dmalloc \
-    --without-odbc \
-    --with-threads \
-    --with-libpng \
-    --with-libjpeg 
-
-If using gtk 1.0.6 rather than 1.2.x, youu need to add --without-dnd .
-If you experience a problem with thread support, you can just as well
-compile it --without-threads, they are not currently required.
